# cloud-native-cloud-cover-detection

./: .gitignore  pyproject.toml
src/cloud_cover_detection/: __init__.py  config.py  preprocess.py  reprojection.py  torch_dataloader.py  vorticity.py
